--- a/filemanager/src/main/res/layout/navigation_view_simple_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_simple_item.xml
@@ -15,34 +15,35 @@
  -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/navigation_view_details_item"
-  android:layout_width="match_parent"
-  android:layout_height="@dimen/default_row_height"
-  android:orientation="horizontal">
+    android:id="@+id/navigation_view_details_item"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/default_row_height"
+    android:orientation="horizontal"
+    android:background="?attr/selectableItemBackground">
 
-  <com.cyanogenmod.filemanager.ui.widgets.FixedSizeImageView
-    android:id="@+id/navigation_view_item_icon"
-    android:layout_marginStart="@dimen/easy_mode_type_icon_margin_lr"
-    android:layout_marginEnd="@dimen/easy_mode_type_icon_margin_lr"
-    android:layout_width="@dimen/easy_mode_type_icon_wh"
-    android:layout_height="@dimen/easy_mode_type_icon_wh"
-    android:layout_gravity="center_vertical"
-    android:scaleType="center"
-    android:contentDescription="@null"
-    android:src="@null" />
+    <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
+        android:id="@+id/navigation_view_item_icon"
+        android:layout_marginStart="@dimen/easy_mode_type_icon_margin_lr"
+        android:layout_marginEnd="@dimen/easy_mode_type_icon_margin_lr"
+        android:layout_width="@dimen/easy_mode_type_icon_wh"
+        android:layout_height="@dimen/easy_mode_type_icon_wh"
+        android:layout_gravity="center_vertical"
+        android:scaleType="center"
+        android:contentDescription="@null"
+        android:src="@null" />
 
-  <TextView
-    android:id="@+id/navigation_view_item_name"
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:layout_marginStart="@dimen/small_margin"
-    android:layout_marginLeft="@dimen/small_margin"
-    android:layout_marginEnd="@dimen/extra_margin"
-    android:layout_marginRight="@dimen/extra_margin"
-    android:gravity="start|center_vertical"
-    android:singleLine="true"
-    android:ellipsize="middle"
-    android:textAppearance="@style/primary_text_appearance"/>
+    <TextView
+        android:id="@+id/navigation_view_item_name"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginLeft="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/extra_margin"
+        android:layout_marginRight="@dimen/extra_margin"
+        android:gravity="start|center_vertical"
+        android:singleLine="true"
+        android:ellipsize="middle"
+        android:textAppearance="@style/primary_text_appearance"/>
 
 </LinearLayout>
