--- a/filemanager/src/main/res/layout/navigation_view_icons_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_icons_item.xml
@@ -27,6 +27,7 @@
         android:scaleType="centerCrop"
         android:contentDescription="@null"
         android:gravity="center|center_vertical"
+        android:layout_centerHorizontal="true"
         android:src="@null" />
 
     <TextView
