--- a/filemanager/src/main/res/layout/navigation_view_simple_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_simple_item.xml
@@ -24,13 +24,16 @@
     <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
         android:id="@+id/navigation_view_item_icon"
         android:layout_marginStart="@dimen/easy_mode_type_icon_margin_lr"
+        android:layout_marginLeft="@dimen/easy_mode_type_icon_margin_lr"
         android:layout_marginEnd="@dimen/easy_mode_type_icon_margin_lr"
+        android:layout_marginRight="@dimen/easy_mode_type_icon_margin_lr"
         android:layout_width="@dimen/easy_mode_type_icon_wh"
         android:layout_height="@dimen/easy_mode_type_icon_wh"
         android:layout_gravity="center_vertical"
         android:scaleType="center"
         android:contentDescription="@null"
-        android:src="@null" />
+        android:src="@null"
+         />
 
     <TextView
         android:id="@+id/navigation_view_item_name"
