--- a/filemanager/src/main/res/layout/navigation_view_simple_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_simple_item.xml
@@ -1,20 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The CyanogenMod Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
- -->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/navigation_view_details_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/default_row_height"
@@ -23,17 +9,13 @@
 
     <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
         android:id="@+id/navigation_view_item_icon"
-        android:layout_marginStart="@dimen/easy_mode_type_icon_margin_lr"
-        android:layout_marginLeft="@dimen/easy_mode_type_icon_margin_lr"
-        android:layout_marginEnd="@dimen/easy_mode_type_icon_margin_lr"
-        android:layout_marginRight="@dimen/easy_mode_type_icon_margin_lr"
-        android:layout_width="@dimen/easy_mode_type_icon_wh"
-        android:layout_height="@dimen/easy_mode_type_icon_wh"
+        android:layout_width="@dimen/default_row_height"
+        android:layout_height="@dimen/default_row_height"
         android:layout_gravity="center_vertical"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:contentDescription="@null"
-        android:src="@null"
-         />
+        android:background="#F00"
+        android:src="@drawable/ic_fso_default_24dp"/>
 
     <TextView
         android:id="@+id/navigation_view_item_name"
@@ -47,6 +29,7 @@
         android:gravity="start|center_vertical"
         android:singleLine="true"
         android:ellipsize="middle"
+        android:background="#0F0"
         android:textAppearance="@style/primary_text_appearance"/>
 
 </LinearLayout>
