- создал Вью которое будет видно снаружи, а рабочее переименовать "интернал", чтобы спрятать паблик функции - пересмотрел работу добавления/удаления декораторов - глучит, т.к. при показе как лист - постоянно их добавляет. Думаю презентер должен следить чтобы не менялся режим, если и так включен подходящий.
ТУДУ:
- сортировка и пр. настрой

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
     tools:context="corp.wmsoft.android.examples.filemanager.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FileManagerView
+    <corp.wmsoft.android.lib.filemanager.FileManagerView
         android:id="@+id/navigation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
