- не рабочий комит - нужно как нить соединить mountPointsView & FileManagerView...
ТУДУ:
- создать фильтр isDisplayAllowed...

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
     tools:showIn="@layout/app_bar_main">
 
     <corp.wmsoft.android.lib.filemanager.FileManagerView
-        android:id="@+id/navigation_view"
+        android:id="@+id/file_manager_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
