--- a/filemanager/src/main/res/layout/navigation_view_details_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_details_item.xml
@@ -12,7 +12,6 @@
         android:layout_width="@dimen/default_row_height"
         android:layout_height="@dimen/default_row_height"
         android:layout_gravity="center_vertical"
-        android:scaleType="centerCrop"
         android:contentDescription="@null"
         android:src="@drawable/ic_fso_default_24dp" />
 
@@ -34,7 +33,7 @@
                   android:layout_marginLeft="@dimen/default_margin"
                   android:layout_marginTop="@dimen/default_margin"
                   android:ellipsize="middle"
-                  android:singleLine="true"
+                  android:maxLines="1"
                   android:textAppearance="@style/primary_text_appearance"/>
 
             <TextView
@@ -47,7 +46,7 @@
                   android:layout_marginBottom="@dimen/default_margin"
                   android:layout_marginStart="@dimen/default_margin"
                   android:layout_marginLeft="@dimen/default_margin"
-                  android:singleLine="true"
+                  android:maxLines="1"
                   android:textAppearance="@style/secondary_text_appearance"/>
 
             <TextView
@@ -58,7 +57,7 @@
                   android:layout_alignParentEnd="true"
                   android:layout_alignParentRight="true"
                   android:layout_marginBottom="@dimen/default_margin"
-                  android:singleLine="true"
+                  android:maxLines="1"
                   android:textAppearance="@style/secondary_text_appearance"
                   android:textStyle="bold"/>
 
