--- a/filemanager/src/main/res/layout/navigation_view_details_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_details_item.xml
@@ -1,65 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_view_details_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/default_row_height"
+    android:layout_height="@dimen/wm_fm_default_row_height"
     android:orientation="horizontal"
     android:background="?attr/selectableItemBackground">
 
     <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
         android:id="@+id/navigation_view_item_icon"
-        android:layout_width="@dimen/default_row_height"
-        android:layout_height="@dimen/default_row_height"
+        android:layout_width="@dimen/wm_fm_default_row_height"
+        android:layout_height="@dimen/wm_fm_default_row_height"
         android:layout_gravity="center_vertical"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_fso_default_24dp" />
+        android:contentDescription="@null" />
 
-      <RelativeLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginEnd="@dimen/extra_margin"
-            android:layout_marginRight="@dimen/extra_margin">
+            android:layout_marginEnd="@dimen/wm_fm_extra_margin"
+            android:layout_marginRight="@dimen/wm_fm_extra_margin">
 
             <TextView
-                  android:id="@+id/navigation_view_item_name"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_alignParentStart="true"
-                  android:layout_alignParentLeft="true"
-                  android:layout_alignParentTop="true"
-                  android:layout_marginStart="@dimen/default_margin"
-                  android:layout_marginLeft="@dimen/default_margin"
-                  android:layout_marginTop="@dimen/default_margin"
-                  android:ellipsize="middle"
-                  android:maxLines="1"
-                  android:textAppearance="@style/primary_text_appearance"/>
+                android:id="@+id/navigation_view_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="@dimen/wm_fm_default_margin"
+                android:layout_marginLeft="@dimen/wm_fm_default_margin"
+                android:layout_marginTop="@dimen/wm_fm_default_margin"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="@style/wm_fm_primary_text_appearance"/>
 
             <TextView
-                  android:id="@+id/navigation_view_item_summary"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_alignParentBottom="true"
-                  android:layout_alignParentStart="true"
-                  android:layout_alignParentLeft="true"
-                  android:layout_marginBottom="@dimen/default_margin"
-                  android:layout_marginStart="@dimen/default_margin"
-                  android:layout_marginLeft="@dimen/default_margin"
-                  android:maxLines="1"
-                  android:textAppearance="@style/secondary_text_appearance"/>
+                android:id="@+id/navigation_view_item_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="@dimen/wm_fm_default_margin"
+                android:gravity="end"
+                android:maxLines="1"
+                android:textAppearance="@style/wm_fm_secondary_text_appearance"
+                android:textStyle="bold" />
 
             <TextView
-                  android:id="@+id/navigation_view_item_size"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_alignParentBottom="true"
-                  android:layout_alignParentEnd="true"
-                  android:layout_alignParentRight="true"
-                  android:layout_marginBottom="@dimen/default_margin"
-                  android:maxLines="1"
-                  android:textAppearance="@style/secondary_text_appearance"
-                  android:textStyle="bold"/>
+                android:id="@+id/navigation_view_item_summary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="@dimen/wm_fm_default_margin"
+                android:layout_marginStart="@dimen/wm_fm_default_margin"
+                android:layout_marginLeft="@dimen/wm_fm_default_margin"
+                android:gravity="start"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="@style/wm_fm_secondary_text_appearance"
+                android:layout_toLeftOf="@+id/navigation_view_item_size"
+                android:layout_toStartOf="@+id/navigation_view_item_size" />
+
+
 
       </RelativeLayout>
 
