--- a/filemanager/src/main/res/layout/navigation_view_icons_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_icons_item.xml
@@ -15,15 +15,16 @@
  -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_view_details_item"
-    android:layout_width="@dimen/navigation_grid_width"
-    android:layout_height="@dimen/navigation_grid_height"
+    android:layout_width="@dimen/wm_fm_navigation_grid_width"
+    android:layout_height="@dimen/wm_fm_navigation_grid_height"
     android:background="?attr/selectableItemBackground">
 
     <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
         android:id="@+id/navigation_view_item_icon"
-        android:layout_width="@dimen/default_row_height"
-        android:layout_height="@dimen/default_row_height"
+        android:layout_width="@dimen/wm_fm_default_row_height"
+        android:layout_height="@dimen/wm_fm_default_row_height"
         android:contentDescription="@null"
         android:gravity="center|center_vertical"
         android:layout_centerHorizontal="true"
@@ -34,10 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/navigation_view_item_icon"
-        android:ellipsize="middle"
+        android:ellipsize="end"
         android:gravity="center|center_vertical"
-        android:maxLines="@integer/default_grid_item_text_max_lines"
-        android:textAppearance="@style/secondary_text_appearance"
+        android:maxLines="@integer/wm_fm_default_grid_item_text_max_lines"
+        android:textAppearance="@style/wm_fm_secondary_text_appearance"
         android:textStyle="bold" />
 
 </RelativeLayout>
