--- a/filemanager/src/main/res/values/styles.xml
+++ b/filemanager/src/main/res/values/styles.xml
@@ -2,16 +2,16 @@
 <resources>
 
     <!-- The text appearance for principal information (text that need to be highlighted) -->
-    <style name="primary_text_appearance">
-        <item name="android:textSize">@dimen/primary_text_size</item>
-        <item name="android:textColor">@color/black_transparent</item>
+    <style name="wm_fm_primary_text_appearance">
+        <item name="android:textSize">@dimen/wm_fm_primary_text_size</item>
+        <item name="android:textColor">@color/wm_fm_black_transparent</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <!-- The text appearance for secondary information (text with a lower importance) -->
-    <style name="secondary_text_appearance">
-        <item name="android:textSize">@dimen/secondary_text_size</item>
-        <item name="android:textColor">@color/black_transparent</item>
+    <style name="wm_fm_secondary_text_appearance">
+        <item name="android:textSize">@dimen/wm_fm_secondary_text_size</item>
+        <item name="android:textColor">@color/wm_fm_black_transparent</item>
         <item name="android:textStyle">normal</item>
     </style>
 
