--- a/filemanager/src/main/res/layout/navigation_view_icons_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_icons_item.xml
@@ -1,44 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The CyanogenMod Project
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    <data>
+        <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FSOViewModel"/>
+        <variable name="presenter" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.IFileManagerViewContract.Presenter"/>
+    </data>
 
-          http://www.apache.org/licenses/LICENSE-2.0
+    <RelativeLayout
+        android:id="@+id/navigation_view_details_item"
+        android:layout_width="@dimen/wm_fm_navigation_grid_width"
+        android:layout_height="@dimen/wm_fm_navigation_grid_height"
+        android:onClick="@{() -> presenter.onFSOPicked(viewModel)}"
+        android:background="?attr/selectableItemBackground">
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
- -->
+        <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
+            android:id="@+id/navigation_view_item_icon"
+            android:layout_width="@dimen/wm_fm_default_row_height"
+            android:layout_height="@dimen/wm_fm_default_row_height"
+            android:contentDescription="@null"
+            android:gravity="center|center_vertical"
+            android:layout_centerHorizontal="true"
+            android:src="@null" />
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_view_details_item"
-    android:layout_width="@dimen/wm_fm_navigation_grid_width"
-    android:layout_height="@dimen/wm_fm_navigation_grid_height"
-    android:background="?attr/selectableItemBackground">
+        <TextView
+            android:id="@+id/navigation_view_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@{viewModel.fso.name}"
+            android:layout_below="@id/navigation_view_item_icon"
+            android:ellipsize="end"
+            android:gravity="center|center_vertical"
+            android:maxLines="@integer/wm_fm_default_grid_item_text_max_lines"
+            android:textAppearance="@style/wm_fm_secondary_text_appearance"
+            android:textStyle="bold" />
 
-    <corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView
-        android:id="@+id/navigation_view_item_icon"
-        android:layout_width="@dimen/wm_fm_default_row_height"
-        android:layout_height="@dimen/wm_fm_default_row_height"
-        android:contentDescription="@null"
-        android:gravity="center|center_vertical"
-        android:layout_centerHorizontal="true"
-        android:src="@null" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/navigation_view_item_name"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/navigation_view_item_icon"
-        android:ellipsize="end"
-        android:gravity="center|center_vertical"
-        android:maxLines="@integer/wm_fm_default_grid_item_text_max_lines"
-        android:textAppearance="@style/wm_fm_secondary_text_appearance"
-        android:textStyle="bold" />
-
-</RelativeLayout>
+</layout>
