--- a/filemanager/src/main/res/layout/navigation_view_details_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_details_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FSOViewModel"/>
@@ -18,6 +19,7 @@
             android:id="@+id/navigation_view_item_icon"
             android:layout_width="@dimen/wm_fm_default_row_height"
             android:layout_height="@dimen/wm_fm_default_row_height"
+            app:iconByFso="@{viewModel}"
             android:layout_gravity="center_vertical"
             android:contentDescription="@null" />
 
