--- a/filemanager/src/main/res/layout/navigation_view_details_item.xml
+++ b/filemanager/src/main/res/layout/navigation_view_details_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FSOViewModel"/>
@@ -20,64 +21,70 @@
             android:layout_width="@dimen/wm_fm_default_row_height"
             android:layout_height="@dimen/wm_fm_default_row_height"
             app:iconByFso="@{viewModel}"
+            tools:src="@drawable/ic_fso_default_24dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@null" />
 
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginEnd="@dimen/wm_fm_extra_margin"
-                android:layout_marginRight="@dimen/wm_fm_extra_margin">
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginEnd="@dimen/wm_fm_extra_margin"
+            android:layout_marginRight="@dimen/wm_fm_extra_margin">
 
-                <TextView
-                    android:id="@+id/navigation_view_item_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.fso.name}"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="@dimen/wm_fm_default_margin"
-                    android:layout_marginLeft="@dimen/wm_fm_default_margin"
-                    android:layout_marginTop="@dimen/wm_fm_default_margin"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textAppearance="@style/wm_fm_primary_text_appearance"/>
+            <TextView
+                android:id="@+id/navigation_view_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:text="@{viewModel.fso.name}"
+                tools:text="dsfg,ngsdfgsdfdfgsdfgsdfgsdfgsdfgsdfgsdfggfg"
+                android:layout_marginStart="@dimen/wm_fm_default_margin"
+                android:layout_marginLeft="@dimen/wm_fm_default_margin"
+                android:layout_marginTop="@dimen/wm_fm_default_margin"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="@style/wm_fm_primary_text_appearance"/>
 
-                <TextView
-                    android:id="@+id/navigation_view_item_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.itemSize}"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginBottom="@dimen/wm_fm_default_margin"
-                    android:gravity="end"
-                    android:maxLines="1"
-                    android:textAppearance="@style/wm_fm_secondary_text_appearance"
-                    android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/navigation_view_item_summary"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@{viewModel.itemSummary}"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
+                    tools:text="dsfg,nsdfgjdfsgfgsdfgsdfgsdfgsdsdfgsdfgfgsdfgsdfgsdfgsdfgfg"
                     android:layout_marginBottom="@dimen/wm_fm_default_margin"
                     android:layout_marginStart="@dimen/wm_fm_default_margin"
                     android:layout_marginLeft="@dimen/wm_fm_default_margin"
                     android:gravity="start"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:textAppearance="@style/wm_fm_secondary_text_appearance"
-                    android:layout_toLeftOf="@+id/navigation_view_item_size"
-                    android:layout_toStartOf="@+id/navigation_view_item_size" />
+                    android:textAppearance="@style/wm_fm_secondary_text_appearance" />
 
-          </RelativeLayout>
+                <TextView
+                    android:id="@+id/navigation_view_item_size"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="@{viewModel.itemSize}"
+                    tools:text="88888.88 GB"
+                    android:layout_marginBottom="@dimen/wm_fm_default_margin"
+                    android:gravity="end"
+                    android:maxLines="1"
+                    android:textAppearance="@style/wm_fm_secondary_text_appearance"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </FrameLayout>
+
 
     </LinearLayout>
 
